--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "node hello world",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "watch": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
